--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,30 @@
 spring.application.name=ba-todoList
+
+# Context Path
+server.servlet.context-path=/ba-todolist/api
 server.port=8000
+
+# PostgreSQL Database Configuration
+spring.datasource.url=${url}
+spring.datasource.username=${username}
+spring.datasource.password=${password}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Logging
+logging.level.org.springframework=INFO
+logging.level.org.hibernate=INFO
+
+# Encoding
 spring.messages.encoding=UTF-8
+
+# Swagger/OpenAPI Configuration
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operations-sorter=method
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/v3/api-docs
